force-app/main/default/objects/Comparison_Session__c/Comparison_Session__c.object-meta.xml
<CustomObject>
    <label>Comparison Session</label>
    <pluralLabel>Comparison Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Comparison Session Name</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>