force-app/main/default/objects/Comparison_Session__c/fields/Ended_On__c.field-meta.xml
<CustomField>
    <fullName>Ended_On__c</fullName>
    <label>Ended On</label>
    <type>DateTime</type>
</CustomField>