force-app/main/default/objects/Comparison_Session__c/fields/Last_Exported_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Exported_On__c</fullName>
    <label>Last Exported On</label>
    <type>DateTime</type>
</CustomField>