force-app/main/default/objects/Comparison_Session__c/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <label>Preferences (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>