force-app/main/default/objects/Comparison_Session__c/fields/Properties__c.field-meta.xml
<CustomField>
    <fullName>Properties__c</fullName>
    <label>Properties (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>