force-app/main/default/objects/Comparison_Session__c/fields/Public_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_Report_URL__c</fullName>
    <label>Public Report URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>