force-app/main/default/objects/Comparison_Session__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Comparison Sessions</relationshipLabel>
    <relationshipName>Comparison_Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>