force-app/main/default/objects/Comparison_Session__c/fields/Weights__c.field-meta.xml
<CustomField>
    <fullName>Weights__c</fullName>
    <label>Weights (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>